--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.11.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
