--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-plugin-component": "^1.1.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
